# comfyui-eagle-feeder

./: .gitignore  README.md  README_JP.md  __init__.py  pyproject.toml  requirements.txt
api/: eagle_api.py
nodes/: eagle_feeder.py  eagle_feeder_animated_webp.py  eagle_feeder_base.py  eagle_feeder_mp4.py  eagle_feeder_png.py
utils/: file_server.py  image_utils.py
