[project]
name = "eagle-feeder"
description = "A custom node for ComfyUI that allows you to send images directly to [a/Eagle](https://jp.eagle.cool/)."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["loguru==0.7.3", "Pillow==11.2.1", "Requests==2.32.3", "torch==2.6.0", "torchvision==0.21.0"]

[project.urls]
Repository = "https://github.com/tighug/comfyui-eagle-feeder"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tighug"
DisplayName = "comfyui-eagle-feeder"
Icon = ""
